# HITL-ADK

./: .gitignore  A2A_README.md  Dockerfile  README.md  env_example.txt  pyproject.toml  run_local.py  run_rest.py  run_web.py  setup_agent_engine.py
hitl_agent/: __init__.py  agent.py  callbacks.py  prompts.py  services.py  tools.py
iterative_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  env_example.txt  prompts.py  requirements.txt  tools.py
orchestrator_agent/: __init__.py  agent.py  env_example.txt  prompts.py  requirements.txt  run_orchestrator.py  run_rest.py  run_web.py  tools.py
proposal_agent/: Dockerfile  __init__.py  __main__.py  agent.py  agent_executor.py  env_example.txt  prompts.py  requirements.txt  tools.py
